--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
     <title>College Rankings Calculator</title>
     <link type="text/css" rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link type="text/css" rel="stylesheet" href="slider.min.css">
     
     <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
     <script scr="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
@@ -10,11 +11,25 @@
     <div class="container">
         <h1>College Rankings Calculator</h1>
         <div class="row">
-            <div class="col-sm-6"></div>
+            <div class="col-sm-6" id="form">
+            </div>
             <div id="colleges" class="col-sm-4"></div>
             <div class="col-sm-2"></div>
         </div>
     </div>
+    <script src="slider.min.js"></script>
     <script src="main.js"></script>
+    <!--<script>
+        // Instantiate a slider
+        var mySlider = $("#formy").slider();
+
+        // Call a method on the slider
+        var value = mySlider.slider('getValue');
+
+        // For non-getter methods, you can chain together commands
+            mySlider
+                .slider('setValue', 5)
+                .slider('setValue', 7);
+    </script>-->
 </body>
 </html>
